[project]
name = "fastapi-cacheops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "redis>=5.2.0",
    "sqlalchemy>=2.0.36",
]

[[tool.uv.index]]
url = "https://repo.mci.dev/artifactory/api/pypi/pypi/simple"
default = true
